updated new projects

--- a/index.html
+++ b/index.html
@@ -58,12 +58,40 @@
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
+                <div class="two" id='rsz_contrastive_mpc.png'><img src='images/rsz_contrastive_mpc.png'></div>
+                <img src='images/rsz_contrastive_mpc.png'>
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2003.05436">
+                <papertitle>Learning Predictive Representations for Deformable Objects Using Contrastive Estimation</papertitle>
+              </a>
+              <br>
+              <a href="https://wilson1yan.github.io">Wilson Yan</a>,
+              <a href="https://www.linkedin.com/in/ashwin-vangipuram-06606116a/">Ashwin Vangipuram</a>,
+              <a href="https://people.eecs.berkeley.edu/~pabbeel/">Pieter Abbeel</a>,
+              <a href="https://cs.nyu.edu/~lp91/">Lerrel Pinto</a>
+              <br>
+              <em>Preprint, Under review for IROS 2020</em>
+              <br>
+              <a href="https://sites.google.com/view/contrastive-predictive-model/home">project page</a>
+              <br>
+              <p></p>
+              <p>Using contrastive methods to learn plannable representations for manipulating deformable objects such as rope and cloth</p>
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
                 <div class="two" id='rsz_fisher_score.png'><img src='images/rsz_fisher_score.png'></div>
                 <img src='images/rsz_fisher_score.png'>
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="data/fisher_score.pdf">
+              <a href="https://arxiv.org/abs/1912.05015">
                 <papertitle>Natural Image Manipulation for Autoregressive Models using Fisher Scores</papertitle>
               </a>
               <br>
@@ -71,7 +99,7 @@
               <a href="http://www.jonathanho.me/">Jonathan Ho</a>,
               <a href="https://people.eecs.berkeley.edu/~pabbeel/">Pieter Abbeel</a>,
               <br>
-              <em>Preprint, Under review for ICLR 2020</em>
+              <em>Preprint, Under review for ICML 2020</em>
               <br>
               <p></p>
               <p>Performing image interpolation and semantic manipulation (e.g. hair color, smiling, gender) with a PixelCN on facial images using Fisher scores as an embedding space</p>
@@ -98,7 +126,7 @@
               <a href="https://cs.nyu.edu/~lp91/">Lerrel Pinto</a>,
               <a href="https://people.eecs.berkeley.edu/~pabbeel/">Pieter Abbeel</a>,
               <br>
-              <em>Preprint, Under review for ICRA 2020</em>
+              <em>Preprint, Under review for RSS 2020</em>
               <br>
               <a href="https://sites.google.com/view/alternating-pick-and-place/home">project page</a>
               <br>
@@ -130,7 +158,7 @@
               <br>
               <br>
               <b> CS 294-158: Deep Unsupervised Learning </b><br>
-              <a href="https://sites.google.com/view/berkeley-cs294-158-sp19/home">Undergraduate Student Instructor, CS294-158 Spring 2020</a>
+              <a href="https://sites.google.com/view/berkeley-cs294-158-sp20/home">Undergraduate Student Instructor, CS294-158 Spring 2020</a>
             </td>
           </tr>
         </tbody></table>
