--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <papertitle>Learning to Manipulate Deformable Objects without Demonstrations</papertitle>
               </a>
               <br>
-              Yilin Wu,
+              <a href="http://yilinwu.net/">Yilin Wu</a>,
               <a href="https://wilson1yan.github.io">Wilson Yan</a>,
               <a href="http://people.eecs.berkeley.edu/~thanard.kurutach/">Thanard Kurutach</a>,
               <a href="https://cs.nyu.edu/~lp91/">Lerrel Pinto</a>,
