Update after graduation

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <name>Wilson Yan</name>
               </p>
               <p>
-                Hi everyone! I'm an 4th year undergraduate studying Computer Science and Applied Math at UC Berkeley. I am currently working as a researcher in <a href="https://people.eecs.berkeley.edu/~pabbeel/">Professor Pieter Abbeel's</a> lab as a part of <a href="https://bair.berkeley.edu/">Berkeley AI Research</a>.
+                Hi everyone! I'm an 1st year Computer Science PhD Student at UC Berkeley. I am currently advised by <a href="https://people.eecs.berkeley.edu/~pabbeel/">Professor Pieter Abbeel</a> as a part of <a href="https://bair.berkeley.edu/">Berkeley AI Research</a>.
               </p>
               <p style="text-align:center">
                 <a href="mailto:wilson1.yan@berkeley.edu">Email</a> &nbsp/&nbsp
