--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                I am interested in reinforcement learning, unsupervised learning and self-supervised learning. My current research is focused on using representation learning to learn strong, plannable latent spaces for robotic learning tasks.
+                I am interested in reinforcement learning, unsupervised learning and self-supervised learning. My current research is focused on learning models for accurate video prediction and generation.
               </p>
             </td>
           </tr>
