--- a/index.html
+++ b/index.html
@@ -1,16 +1,5 @@
 <!DOCTYPE HTML>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <!-- Hi, Jon Here. Please DELETE the two <script> tags below if you use this HTML, otherwise my analytics will track your page -->
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-7580334-2"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-7580334-2');
-  </script>
-
   <title>Wilson Yan</title>
 
   <meta name="author" content="Wilson Yan">
@@ -30,7 +19,7 @@
                 <name>Wilson Yan</name>
               </p>
               <p>
-                Hi everyone! I'm an 1st year Computer Science PhD Student at UC Berkeley. I am currently advised by <a href="https://people.eecs.berkeley.edu/~pabbeel/">Professor Pieter Abbeel</a> as a part of <a href="https://bair.berkeley.edu/">Berkeley AI Research</a>.
+                Hi everyone! I'm a 1st year Computer Science PhD Student at UC Berkeley. I am currently advised by <a href="https://people.eecs.berkeley.edu/~pabbeel/">Professor Pieter Abbeel</a> as a part of <a href="https://bair.berkeley.edu/">Berkeley AI Research</a>.
               </p>
               <p style="text-align:center">
                 <a href="mailto:wilson1.yan@berkeley.edu">Email</a> &nbsp/&nbsp
@@ -72,7 +61,7 @@
               <a href="https://people.eecs.berkeley.edu/~pabbeel/">Pieter Abbeel</a>,
               <a href="https://cs.nyu.edu/~lp91/">Lerrel Pinto</a>
               <br>
-              <em>Preprint, Under review for IROS 2020</em>
+              <em>CoRL 2020</em>
               <br>
               <a href="https://sites.google.com/view/contrastive-predictive-model/home">project page</a>
               <br>
