--- a/index.html
+++ b/index.html
@@ -47,6 +47,34 @@
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
+                <div class="two" id='VideoGPT.png'><img src='images/VideoGPT.png'></div>
+                <img src='images/VideoGPT.png'>
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="TODO">
+                <papertitle>VideoGPT: Generative Pre-Training on Videos using Transformers</papertitle>
+              </a>
+              <br>
+              <a href="https://wilson1yan.github.io">Wilson Yan*</a>,
+              <a href="https://zzyunzhi.github.io/">Yunzhi Zhang*</a>,
+              <a href="https://people.eecs.berkeley.edu/~pabbeel/">Pieter Abbeel</a>,
+              <a href="https://people.eecs.berkeley.edu/~aravind/">AravindSrinivas</a>
+              <br>
+              <em>Under Review</em>
+              <br>
+              <a href="https://wilson1yan.github.io/videogpt/index.html">project page</a>
+              <br>
+              <p></p>
+              <p>An efficient and scalable video generation architecture that first learns a VQ-VAE to compress video data, and then learns a GPT-style transformer to model discrete latent codes</p>
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
                 <div class="two" id='rsz_contrastive_mpc.png'><img src='images/rsz_contrastive_mpc.png'></div>
                 <img src='images/rsz_contrastive_mpc.png'>
               </div>
