--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="TODO">
-                <papertitle>VideoGPT: Generative Pre-Training on Videos using Transformers</papertitle>
+                <papertitle>VideoGPT: Video Generation using VQ-VAE and Transformers</papertitle>
               </a>
               <br>
               <a href="https://wilson1yan.github.io">Wilson Yan*</a>,
