--- a/videogpt/index.html
+++ b/videogpt/index.html
@@ -13,9 +13,9 @@
   <div class="jumbotron jumbotron-fluid text-center">
     <div class="container"></div>
     <h2>
-      VideoGPT: Generative Pre-Training
+      VideoGPT: Video Gneerationg using
       <br>
-      on Videos using Transformers
+      VQ-VAE and Transformers
     </h2>
     <hr>
     <p class="authors">
