--- a/videogpt/index.html
+++ b/videogpt/index.html
@@ -13,7 +13,7 @@
   <div class="jumbotron jumbotron-fluid text-center">
     <div class="container"></div>
     <h2>
-      VideoGPT: Video Gneerationg using
+      VideoGPT: Video Generation using
       <br>
       VQ-VAE and Transformers
     </h2>
