--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="TODO">
+              <a href="https://arxiv.org/abs/2104.10157">
                 <papertitle>VideoGPT: Video Generation using VQ-VAE and Transformers</papertitle>
               </a>
               <br>
