--- a/videogpt/index.html
+++ b/videogpt/index.html
@@ -25,7 +25,7 @@
       <a href="https://people.eecs.berkeley.edu/~aravind/">Aravind Srinivas</a>
     </p>
     <div class="btn-group" role="group" aria-label="Top menu">
-      <a class="btn btn-primary" href="" role="button">Paper</a>
+      <a class="btn btn-primary" href="https://arxiv.org/abs/2104.10157" role="button">Paper</a>
       <a class="btn btn-primary" href="https://github.com/wilson1yan/VideoGPT" role="button">Code</a>
     </div>
   </div>
