--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
                 <name>Wilson Yan</name>
               </p>
               <p>
-                Hi everyone! I'm a 1st year Computer Science PhD Student at UC Berkeley. I am currently advised by <a href="https://people.eecs.berkeley.edu/~pabbeel/">Professor Pieter Abbeel</a> as a part of <a href="https://bair.berkeley.edu/">Berkeley AI Research</a>.
+                Hi everyone! I'm a 3rd year Computer Science PhD Student at UC Berkeley. I am currently advised by <a href="https://people.eecs.berkeley.edu/~pabbeel/">Professor Pieter Abbeel</a> as a part of <a href="https://bair.berkeley.edu/">Berkeley AI Research</a>.
               </p>
               <p style="text-align:center">
                 <a href="mailto:wilson1.yan@berkeley.edu">Email</a> &nbsp/&nbsp
-                <a href="data/WilsonYanResume.pdf">CV</a>
-                <!-- <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp/&nbsp -->
+                <!-- <a href="data/WilsonYanResume.pdf">CV</a> -->
+                <a href="https://scholar.google.com/citations?user=tR2Qw0YAAAAJ&hl=en">Google Scholar</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
@@ -37,8 +37,64 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                I am interested in reinforcement learning, unsupervised learning and self-supervised learning. My current research is focused on learning models for accurate video prediction and generation.
+                I am interested in generative modeling and self-supervised learning. My current research is focused on learning models for accurate video prediction and generation.
               </p>
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='TECO.png'><img src='images/TECO.png'></div>
+                <img src='images/TECO.png'>
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="TODO">
+                <papertitle>Temporally Consistent Video Transformer for Long-Term Video Prediction</papertitle>
+              </a>
+              <br>
+              <a href="https://wilson1yan.github.io">Wilson Yan</a>,
+              <a href="https://danijar.com/">Danijar Hafner</a>,
+              <a href="https://stepjam.github.io/">Stephen James</a>
+              <a href="https://people.eecs.berkeley.edu/~pabbeel/">Pieter Abbeel</a>,
+              <br>
+              <em>Under Review</em>
+              <br>
+              <a href="https://wilson1yan.github.io/teco/index.html">project page</a>
+              <br>
+              <p></p>
+              <p>A vector-quantized latent dynamics video prediction model that learns compressed representations to efficiently condition on long videos of hundreds of frames during both training and generation</p>
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='POVT.png'><img src='images/POVT.png'></div>
+                <img src='images/POVT.png'>
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2206.04003">
+                <papertitle>Patch-based Object-centric Transformers for Efficient Video Generation</papertitle>
+              </a>
+              <br>
+              <a href="https://wilson1yan.github.io">Wilson Yan</a>,
+              <a href="https://www.linkedin.com/in/ryo-okumura-408010119/">Ryo Okumura</a>,
+              <a href="https://stepjam.github.io/">Stephen James</a>
+              <a href="https://people.eecs.berkeley.edu/~pabbeel/">Pieter Abbeel</a>,
+              <br>
+              <em>Under Review</em>
+              <br>
+              <a href="https://sites.google.com/view/povt-public">project page</a>
+              <br>
+              <p></p>
+              <p>An video generation architecture that leverages an object-centric transformer design for more scalable and efficient video generation</p>
             </td>
           </tr>
         </tbody></table>
@@ -60,8 +116,6 @@
               <a href="https://zzyunzhi.github.io/">Yunzhi Zhang*</a>,
               <a href="https://people.eecs.berkeley.edu/~pabbeel/">Pieter Abbeel</a>,
               <a href="https://people.eecs.berkeley.edu/~aravind/">Aravind Srinivas</a>
-              <br>
-              <em>Under Review</em>
               <br>
               <a href="https://wilson1yan.github.io/videogpt/index.html">project page</a>
               <br>
