update paper links

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                I am interested in generative modeling and self-supervised learning. My current research is focused on learning models for accurate video prediction and generation.
+                I am interested in generative modeling and representation learning. My current research is focused on learning models for accurate video prediction and generation.
               </p>
             </td>
           </tr>
@@ -52,7 +52,7 @@
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
-              <a href="TODO">
+              <a href="https://arxiv.org/abs/2210.02396">
                 <papertitle>Temporally Consistent Video Transformer for Long-Term Video Prediction</papertitle>
               </a>
               <br>
