--- a/teco/index.html
+++ b/teco/index.html
@@ -32,7 +32,7 @@
       <a href="https://people.eecs.berkeley.edu/~pabbeel/">Pieter Abbeel</a>
     </p>
     <div class="btn-group" role="group" aria-label="Top menu">
-      <a class="btn btn-primary" href="TODO" role="button">Paper</a>
+      <a class="btn btn-primary" href="https://arxiv.org/abs/2210.02396" role="button">Paper</a>
       <a class="btn btn-primary" href="https://github.com/wilson1yan/teco" role="button">Code</a>
     </div>
   </div>
