--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               </p>
               <p style="text-align:center">
                 <a href="mailto:wilson1.yan@berkeley.edu">Email</a> &nbsp/&nbsp
-                <!-- <a href="data/WilsonYanResume.pdf">CV</a> -->
+                <a href="data/WilsonYanResume.pdf">CV</a>
                 <a href="https://scholar.google.com/citations?user=tR2Qw0YAAAAJ&hl=en">Google Scholar</a>
               </p>
             </td>
