--- a/teco/index.html
+++ b/teco/index.html
@@ -34,6 +34,7 @@
     <div class="btn-group" role="group" aria-label="Top menu">
       <a class="btn btn-primary" href="https://arxiv.org/abs/2210.02396" role="button">Paper</a>
       <a class="btn btn-primary" href="https://github.com/wilson1yan/teco" role="button">Code</a>
+      <a class="btn btn-primary" href="https://twitter.com/WilsonYan8/status/1578424234727964682?s=20&t=lDRkF1kd5XQBjqVTc9ltOg" role="button">Tweet</a>
     </div>
   </div>
   <div class="container">
