--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
               <br>
               <a href="https://wilson1yan.github.io/teco/index.html">project page</a>
               <br>
+              <a href="https://twitter.com/WilsonYan8/status/1578424234727964682?s=20&t=lDRkF1kd5XQBjqVTc9ltOg">tweet</a>
+              <br>
               <p></p>
               <p>A vector-quantized latent dynamics video prediction model that learns compressed representations to efficiently condition on long videos of hundreds of frames during both training and generation</p>
             </td>
