--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://arxiv.org/abs/2210.02396">
-                <papertitle>Temporally Consistent Video Transformer for Long-Term Video Prediction</papertitle>
+                <papertitle>Temporally Consistent Transfomerts for Video Generation</papertitle>
               </a>
               <br>
               <a href="https://wilson1yan.github.io">Wilson Yan</a>,
@@ -61,7 +61,7 @@
               <a href="https://stepjam.github.io/">Stephen James</a>
               <a href="https://people.eecs.berkeley.edu/~pabbeel/">Pieter Abbeel</a>,
               <br>
-              <em>Under Review</em>
+              <em>ICML 2023</em>
               <br>
               <a href="https://wilson1yan.github.io/teco/index.html">project page</a>
               <br>
@@ -90,8 +90,6 @@
               <a href="https://www.linkedin.com/in/ryo-okumura-408010119/">Ryo Okumura</a>,
               <a href="https://stepjam.github.io/">Stephen James</a>
               <a href="https://people.eecs.berkeley.edu/~pabbeel/">Pieter Abbeel</a>,
-              <br>
-              <em>Under Review</em>
               <br>
               <a href="https://sites.google.com/view/povt-public">project page</a>
               <br>
