--- a/teco/index.html
+++ b/teco/index.html
@@ -20,9 +20,7 @@
   <div class="jumbotron jumbotron-fluid text-center">
     <div class="container"></div>
     <h2>
-      Temporally Consistent Video Transformer
-      <br>
-      for Long-Term Video Prediction
+      Temporally Consistent Transformers for Video Generation
     </h2>
     <br>
     <p class="authors">
