--- a/teco/index.html
+++ b/teco/index.html
@@ -40,23 +40,18 @@
       <h2> Abstract </h2>
       <hr>
       <p>
-        Generating long, temporally consistent video remains an open challenge in video generation. 
-        Primarily due to computational limitations, most prior methods limit themselves to training 
-        on a small subset of frames that are then extended to generate longer videos through a sliding 
-        window fashion. Although these techniques may produce sharp videos, they have difficulty 
-        retaining long-term temporal consistency due to their limited context length. In this work, 
-        we present <b>Te</b>mporally <b>Co</b>nsistent Video Transformer (TECO), a vector-quantized 
-        latent dynamics video prediction model that learns compressed representations to efficiently 
-        condition on long videos of hundreds of frames during both training and generation. We use a 
-        MaskGit prior for dynamics prediction which enables both sharper and faster generations compared 
-        to prior work. Our experiments show that TECO outperforms SOTA baselines in a variety of video 
-        prediction benchmarks ranging from simple mazes in DMLab, large 3D worlds in Minecraft, and complex 
-        real-world videos from Kinetics-600. In addition, to better understand the capabilities of video 
-        prediction models in modeling temporal consistency, we introduce several challenging video prediction 
-        tasks consisting of agents randomly traversing 3D scenes of varying difficulty. This presents a 
-        challenging benchmark for video prediction in partially observable environments where a model 
-        must understand what parts of the scenes to re-create versus invent depending on its past 
-        observations or generations.
+	To generate accurate videos, algorithms have to understand the spatial and temporal dependencies 
+	in the world. Current algorithms enable accurate predictions over short horizons but tend to 
+	suffer from temporal inconsistencies. When generated content goes out of view and is later revisited, 
+	the model invents different content instead. Despite this severe limitation, no established benchmarks 
+	exist for video generation with long temporal dependencies. In this paper, we curate 3 challenging 
+	video datasets with long-range dependencies by rendering walks through 3D scenes of procedural mazes, 
+	Minecraft worlds, and indoor scans. We perform a comprehensive evaluation of current models and 
+	observe their limitations in temporal consistency. Moreover, we introduce the Temporally Consistent 
+	Transformer (TECO), a generative model that substantially improves long-term consistency while also 
+	reducing sampling time. By compressing its input sequence into fewer embeddings, applying a 
+	temporal transformer, and expanding back using a spatial MaskGit, TECO outperforms existing models 
+	across many metrics.
       </p>
     </div>
 
