--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <name>Wilson Yan</name>
               </p>
               <p>
-                Hi everyone! I'm a 3rd year Computer Science PhD Student at UC Berkeley. I am currently advised by <a href="https://people.eecs.berkeley.edu/~pabbeel/">Professor Pieter Abbeel</a> as a part of <a href="https://bair.berkeley.edu/">Berkeley AI Research</a>.
+                Hi everyone! I'm a 4th year Computer Science PhD Student at UC Berkeley. I am currently advised by <a href="https://people.eecs.berkeley.edu/~pabbeel/">Professor Pieter Abbeel</a> as a part of <a href="https://bair.berkeley.edu/">Berkeley AI Research</a>.
               </p>
               <p style="text-align:center">
                 <a href="mailto:wilson1.yan@berkeley.edu">Email</a> &nbsp/&nbsp
@@ -37,8 +37,101 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                I am interested in generative modeling and representation learning. My current research is focused on learning models for accurate video prediction and generation.
+                I am interested in generative modeling. My current research is focused on learning models for accurate video prediction and generation.
               </p>
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='MoCA.png'><img src='images/MOCA.png'></div>
+                <img src='images/MoCA.png'>
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2311.18827">
+                <papertitle>Motion-Conditioned Image Animation for Video Editing</papertitle>
+              </a>
+              <br>
+              <a href="https://wilson1yan.github.io">Wilson Yan</a>,
+              <a href="https://www.robots.ox.ac.uk/~abrown/">Andrew Brown</a>,
+              <a href="https://people.eecs.berkeley.edu/~pabbeel/">Pieter Abbeel</a>,
+              <a href="https://rohitgirdhar.github.io/">Rohit Girdhar</a>,
+              <a href="https://scholar.google.com/citations?user=X0EXfT8AAAAJ&hl=en">Samaneh Azadi</a>
+              <br>
+              <em>In Submission</em>
+              <br>
+              <a href="https://facebookresearch.github.io/MoCA/">project page</a>
+              <br>
+              <a href="https://twitter.com/wilson1yan/status/1730661144803897789">tweet</a>
+              <br>
+              <p></p>
+              <p>A motion-conditioned image animation approach to video editing that enabled a diverse range of edit types</p>
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='VIPER.png'><img src='images/VIPER.png'></div>
+                <img src='images/VIPER.png'>
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2305.14343">
+                <papertitle>Video Prediction Models as Rewards for Reinforcement Learning</papertitle>
+              </a>
+              <br>
+              <a href="https://www.escontrela.me/">Alejandro Escontrela*</a>,
+              <a href="https://ademiadeniji.github.io/">Ademi Adeniji*</a>,
+              <a href="https://wilson1yan.github.io">Wilson Yan*</a>,
+              <a href="https://www.ajayjain.net/">Ajay Jain</a>,
+              <a href="https://xbpeng.github.io/">Xue Bin Peng</a>,
+              <a href="https://goldberg.berkeley.edu/">Ken Goldberg</a>,
+              <a href="https://youngwoon.github.io/">Youngwoon Lee</a>,
+              <a href="https://danijar.com/">Danijar Hafner</a>,
+              <a href="https://people.eecs.berkeley.edu/~pabbeel/">Pieter Abbeel</a>
+              <br>
+              <em>NeurIPS 2023</em>
+              <br>
+              <a href="https://www.escontrela.me/viper/">project page</a>
+              <br>
+              <a href="https://twitter.com/AleEscontrela/status/1661363555495710721">tweet</a>
+              <br>
+              <p></p>
+              <p>We show that video prediction likelihoods can provide more dense reward signal for learning reinforcement learning agents</p>
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='LQAE.png'><img src='images/LQAE.png'></div>
+                <img src='images/LQAE.png'>
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2302.00902">
+                <papertitle>Language Quantized AutoEncoders: Towards Unsupervised Text-Imge Alignment</papertitle>
+              </a>
+              <br>
+              <a href="https://haoliu.site/">Hao Liu</a>,
+              <a href="https://wilson1yan.github.io">Wilson Yan</a>,
+              <a href="https://people.eecs.berkeley.edu/~pabbeel/">Pieter Abbeel</a>
+              <br>
+              <em>NeurIPS 2023</em>
+              <br>
+              <a href="https://twitter.com/haoliuhl/status/1625273748629901312">tweet</a>
+              <br>
+              <p></p>
+              <p>We learn an aligned text-image token representation without text-image data, that can then be used for downstream VQA and classification tasks using in-context learning with an LLM</p>
             </td>
           </tr>
         </tbody></table>
@@ -53,7 +146,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://arxiv.org/abs/2210.02396">
-                <papertitle>Temporally Consistent Transfomerts for Video Generation</papertitle>
+                <papertitle>Temporally Consistent Transfomers for Video Generation</papertitle>
               </a>
               <br>
               <a href="https://wilson1yan.github.io">Wilson Yan</a>,
