update with lwm

--- a/index.html
+++ b/index.html
@@ -47,6 +47,36 @@
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
+                <div class="two" id='lwm.png'><img src='images/lwm.png'></div>
+                <img src='images/lwm.png'>
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2402.08268">
+                <papertitle>World Model on Million-Length Video and Language With Blockwise RingAttention</papertitle>
+              </a>
+              <br>
+              <a href="https://www.haoliu.site/">Hao Liu*</a>,
+              <a href="https://wilson1yan.github.io">Wilson Yan*</a>,
+              <a href="https://people.eecs.berkeley.edu/~matei/">Matei Zaharia</a>,
+              <a href="https://people.eecs.berkeley.edu/~pabbeel/">Pieter Abbeel</a>
+              <br>
+              <em>In Submission</em>
+              <br>
+              <a href="https://largeworldmodel.github.io/">project page</a>
+              <br>
+              <a href="https://twitter.com/haoliuhl/status/1757828392362389999">tweet</a>
+              <br>
+              <p></p>
+              <p>A vision-language model trained on million-length sequences of images, language, and video.</p>
+            </td>
+          </tr>
+        </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
                 <div class="two" id='MoCA.png'><img src='images/MOCA.png'></div>
                 <img src='images/MoCA.png'>
               </div>
