--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <name>Wilson Yan</name>
               </p>
               <p>
-                Hi everyone! I'm a 4th year Computer Science PhD Student at UC Berkeley. I am currently advised by <a href="https://people.eecs.berkeley.edu/~pabbeel/">Professor Pieter Abbeel</a> as a part of <a href="https://bair.berkeley.edu/">Berkeley AI Research</a>.
+                Hi everyone! I'm a senior research scientist at Google DeepMind and a 4th year Computer Science PhD Student at UC Berkeley. I am currently advised by <a href="https://people.eecs.berkeley.edu/~pabbeel/">Professor Pieter Abbeel</a> as a part of <a href="https://bair.berkeley.edu/">Berkeley AI Research</a>.
               </p>
               <p style="text-align:center">
                 <a href="mailto:wilson1.yan@berkeley.edu">Email</a> &nbsp/&nbsp
